--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -55,7 +55,7 @@ table:
   description: Description
   edible: Comestible
   habitats: Habitats
-  picture: Imgage
+  picture: Image
   species: Espece
   genus: Genre
   subfamily: Sous-famille
