Update demo website using SPACE DATA ^^

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -3,11 +3,10 @@ menu:
   about: About
 
   datatable: Datatables
-  table: Table
-  table_2: Table (multiple)
-  table_3: Table (draggable)
-  table_api: Api adapter
-  table_tree: Tree
+  basic: Basic
+  custom_adapter: Custom adapter
+  draggable: Draggable
+  editable: Editable
 
   menu: Menu
 
@@ -42,67 +41,49 @@ action:
   edit_fishcategory: Edit a category
 
 table:
-  speciesId: Species id
-  name: Name
-  description: Description
-  edible: Edible
-  habitats: Habitats
-  picture: Picture
-  species: Species
-  genus: Genus
-  subfamily: Sub-family
-  comments: Comment
+  date: Date
+  companyName: Company
+  location: Location
+  detail: Detail
+  cost: Cost
+  rocketStatus: Rocket status
+  missionStatus: Mission status
+
+  date_utc: Date
+  success: Success
+  details: Details
 
 form:
   label:
-    label: Label
-    description: Description
-    icon: icon
-    name: Name
-    edible: Edible
-    habitat: Habitat
-    habitats: Habitats
+    date: Date
+    companyName: Company
+    detail: Detail
+    location: Location
+    missionStatus: Mission status
 
     amount: Amount
     color: Color
     text: Text
     url: Url
-
-    date: Date
     dateTime: DateTime
-
-    fish: Fish
-    fishEntities: Fishes
-    asyncFishEntities: Fishes
     tags: Tags
-
     file: File
     pdf: PDF file
-
-    htmlText: HTML Text
-
+    htmlText: HTML text
     items: Items
     strings: Strings
+    missions: Missions
 
-    recipients: Recipients
-
-  placeholder:
-    habitat: habitat
+    icon: Icon
+    recipients: Destinataires
 
   help:
     suffix_prefix_umbrella_extension: With suffix and prefix Umbrella FormExtension
-    choice_list: Using Choice list
     entity_list: Using Entity list
     async_list: Using Entity list - Async loading
     sortable_compound_collection: Sortable collection with compound FormType
     simple_collection: Collection with simple FormType
     recipients: Will be sent to all if no recipient specified.
-
-fish:
-  habitat:
-    sea: Sea, Ocean
-    river: River
-    lake: Lake, Ponds
 
 message:
   signin_to_bo: "Demo website for de <b>Umbrella Admin</b>.<br><br>Username : <b>umbrella</b><br>Password : <b>umbrella</b>"
