Upgrade Demo - add tree move down / up + add multiple / modal datatable example

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -7,6 +7,8 @@ menu:
   custom_adapter: Custom adapter
   draggable: Draggable
   editable: Editable
+  multiple: Multiple
+  modal: Modal
   tree: Tree
 
   menu: Menu
