--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -25,7 +25,7 @@ menu:
   config_reference: Configuration Reference
 
   admin: Administration
-  users: users
+  users: Users
   groups: Groups
 
 breadcrumb:
